--- a/css/kaos-main.css
+++ b/css/kaos-main.css
@@ -176,7 +176,7 @@ header.smaller.list-unstyled {
 
 .bg-topo {
 	background: url('/img/frat1.jpg');
-	min-height: 50vw;
+	min-height: 25vw;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: bottom;
@@ -184,7 +184,7 @@ header.smaller.list-unstyled {
 
 .bg-2 {
 	background: url('/img/projetos.jpg');
-	min-height: 45vw;
+	min-height: 25vw;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -227,7 +227,7 @@ header.smaller.list-unstyled {
 }
 
 .governanca-ti img {
-	box-shadow: 2px 2px 10px rgba(0, 0, 0, .2);
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, .5);
 	margin: 0 1em;
 }
 
@@ -276,7 +276,7 @@ header.smaller.list-unstyled {
 }
 
 .formulario {
-	max-width: 800px;
+	/* max-width: 800px; */
 	margin-bottom: 15em;
 	padding: 0 2em;
 }
